syntax = "proto3";

import "common.proto";

option go_package = "model";

message StatePerson {
    string id = 1;
    int64 createdOn = 2;
    int64 modifiedOn = 3;
    string publicKey = 4;
    string name = 5;
    string email = 6;
    bool isMajor = 7;
    bool isSigned = 8;
    int32 balance = 9;
    string biographyHash = 10;
    string organization = 12;
    string telephone = 13;
    string address = 14;
    string postalCode = 15;
    string country = 16;
    string extraInfo = 17;
}

message CommandPersonCreate {
    string newPersonId = 1;
    string publicKey = 2;
    string name = 3;
    string email = 4;
}

message CommandPersonUpdateProperties {
    string personId = 1;
    StringUpdate publicKeyUpdate = 2;
    StringUpdate nameUpdate = 3;
    StringUpdate emailUpdate = 4;
    StringUpdate biographyHashUpdate = 5;
    StringUpdate organizationUpdate = 6;
    StringUpdate telephoneUpdate = 7;
    StringUpdate addressUpdate = 8;
    StringUpdate postalCodeUpdate = 9;
    StringUpdate countryUpdate = 10;
    StringUpdate extraInfoUpdate = 11;
}

message CommandPersonUpdateAuthorization {
    string personId = 1;
    BoolUpdate makeMajor = 2;
    BoolUpdate makeSigned = 3;
}

message CommandPersonUpdateBalanceIncrement {
    string personId = 1;
    int32 balanceIncrement = 2;
}
